--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,3 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  overflow: hidden;
-}
-
 #backgroundCanvas {
   position: absolute;
   top: 0;
@@ -30,20 +24,72 @@ html, body {
   display: flex;
   flex-direction: column;
 }
+* {
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
+}
+body, html {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #0f2027, #2c5364);
+  color: white;
+}
 
-/* Example Chat styling */
-#chatContainer.message {
+/* Chat message styles */
+.message {
   margin-bottom: 10px;
-  padding: 5px;
-  border-radius: 4px;
+  clear: both;
+  border-radius: 10px;
 }
 
-#chatContainer.message.user {
-  background-color: #e1f7d5;
-  align-self: flex-end;
+/* Sender message styles */
+.sender {
+  float: right;
+  background-color: #007bff;
+  color: #fff;
 }
 
-#chatContainer.message.bot {
-  background-color: #f5f5f5;
-  align-self: flex-start;
+/* Receiver message styles */
+.receiver {
+  float: left;
+  color: black;
+  background-color: #f1f0f0;
+}
+
+/* Message content styles */
+.message-content {
+  padding: 10px;
+  border-radius: 5px;
+}
+
+/* Clearfix to prevent floating elements from overlapping */
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.typing-animation::after {
+  content: '.';
+  animation: typing 1s infinite;
+}
+
+.typing-animation{
+  width: 15px;
+  margin: 10px;
+  margin-top: 3px;
+}
+
+@keyframes typing {
+  0%, 100% {
+    content: '.';
+  }
+  30% {
+    content: '..';
+  }
+  60%{
+    content: '...';
+  }
 }
