--- a/src/style.css
+++ b/src/style.css
@@ -214,3 +214,43 @@ body, html {
     max-height: 120px; /* Adjust as needed */
   }
 }
+
+
+
+
+
+#playbody {
+  display: none;
+}
+
+
+
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Black transparent background */
+  z-index: 9999; /* Ensure overlay is on top */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Spinner Styles */
+.spinner {
+  width: 60px;
+  height: 60px;
+  border: 6px solid rgba(255, 255, 255, 0.3); /* Semi-transparent border */
+  border-top: 6px solid #ffffff; /* White color for the animated part */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+/* Spinner Animation */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
