--- a/src/style.css
+++ b/src/style.css
@@ -130,13 +130,14 @@ body, html {
 
 .menu h3 {
   text-align: center;
+  font-size: 50px;
   margin-bottom: 10px;
   font-family: Arial, sans-serif;
 }
 
 .menu h1 {
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 80px;
   font-family: Arial, sans-serif;
 }
 
